--- a/src/GravityFall/Resources.resx
+++ b/src/GravityFall/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ExceptionBallNotFound" xml:space="preserve">
+    <value>Ball with number = {0} not found</value>
+  </data>
   <data name="ExceptionObjectNumberDuplicate" xml:space="preserve">
     <value>Object's numbers are not unique</value>
   </data>
